<resources>
    <string name="app_name">HealthApplication</string>
    <string name="skinFirts_text">Skin\nFirts</string>
    <string name="dermatologyCenter_text">Dermatology Center</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="text_log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="email_phone">Email or Mobile Number</string>
    <string name="password">Password\n</string>
    <string name="forgotPassword">Forget Password</string>
    <string name="log_in_buttontext">Log In</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="hello">Hello!</string>
    <string name="or">or</string>
    <string name="signup_hint_text">example@example.com</string>
    <string name="new_account">New Account</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="dob_format">DD/MM/YYYY</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="terms_and_privacy">
        By continuing, you agree to \n<font color="#2260FF">Terms of Use</font> and <font color="#2260FF">Privacy Policy</font>.
    </string>
    <string name="hi_welcome_back">Hi, WelcomeBack</string>
    <string name="john_doe">John Doe</string>
    <string name="doctors_text">Doctors</string>
    <string name="favorite_text">Favorite</string>
    <string name="no_appointments">No appointments this month</string>
    <string name="time_9am">9 AM</string>
    <string name="time_10am">10 AM</string>
    <string name="time_11am">11 AM</string>
    <string name="time_6pm">6 PM</string>
    <string name="doctors">Doctors</string>
    <string name="sort_by">Sort By</string>
    <string name="doctor_info">Doctor Info</string>
    <string name="profile">Profile</string>
    <string name="career_path">Career Path</string>
    <string name="highlights">Highlights</string>
    <string name="doctorname_sample">Dr. Alexander Bennett,\n Ph.D.</string>
    <string name="doctorname_sample_without_nxtLine">Dr. Alexander Bennett, Ph.D.</string>
    <string name="doctor_sample_specification">Dermato-Genetics</string>
    <string name="schedule">Schedule</string>
    <string name="doctor_experience_years">"&lt;b&gt;%1$d years&lt;/b&gt; experience"</string>
    <string name="doctor_focus_text">"&lt;b&gt;Focus:&lt;/b&gt; %1$s"</string>
    <string name="info">Info</string>
    <string name="profile_text">Profile</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="phone_number">+123 567 89000</string>
    <string name="johndoe_email_text">johndoe@example.com</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="help_center">Help Center</string>
    <string name="how_can_we_help_you">How Can We Help You?</string>
    <string name="search">Search…</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="customer_service">Customer Service</string>
    <string name="my_profile_text">My Profile</string>
    <string name="news">News</string>
    <string name="scheduled_change">Scheduled Change</string>
    <string name="two_hour">2H</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="next_week">Next Week</string>
    <string name="notification">Notification</string>
    <string name="mark_all">"Mark all "</string>
    <string name="rating">Rating</string>
    <string name="professional_doctor">Professional Doctor</string>
    <string name="dr_olivia_turner_m_d">Dr. Olivia Turner, M.D.</string>
    <string name="favorite">Favorite</string>
    <string name="services">Services</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="general_notification">General Notification</string>
    <string name="sound">Sound</string>
    <string name="sound_call">Sound Call</string>
    <string name="vibrate">Vibrate</string>
    <string name="special_offers">Special Offers</string>
    <string name="payments">Payments</string>
    <string name="promo_and_discount">Promo and discount</string>
    <string name="cashback">Cashback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="password_manager">Password Manager</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="asteric">***********</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="nine_am">9:00 AM</string>
    <string name="available_time">Available Time</string>
    <string name="patient_details">Patient Details</string>
    <string name="yourself">Yourself</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="age">Age</string>
    <string name="thirty_number">30</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="another_person">Another Person</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="enter_your_problem_here">Enter Your Problem Here...</string>
    <string name="submit">Submit</string>
    <string name="month_prompt">Month</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="rescheduling">Rescheduling</string>
    <string name="weather_conditions">Weather Conditions</string>
    <string name="unexpected_work">Unexpected Work</string>
    <string name="others">Others</string>
    <string name="your_appointment">Your appointment</string>
    <string name="month_24_year">Month 24, Year</string>
    <string name="wed_10_00_am">Wed, 10:00 AM</string>
    <string name="booking_for">Booking For</string>
    <string name="problem">Problem</string>

    <string name="review">Review</string>
    <string name="dermato_endocrinology">Dermato-Endocrinology</string>
    <string name="add_review">Add Review</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="dermato_Endocrinology">Dermato-Endocrinology</string>
    <string name="re_Book">Re-Book</string>
    <string name="add_Review">Add Review</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_appointment">All Appointment</string>
    <string name="complete">Complete</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="details">Details</string>
    <string name="creating_booking">Creating Booking</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="booking_failed">Booking  Failed</string>
    <string name="booking_sucess">Booking  Success</string>
    <string name="month_unavailable">This month is not available for booking</string>
    <string name="changing_password">Changing password....</string>
    <string name="password_change_unsuccessful">Password change unsuccessful</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="popular_topic">Popular Topic</string>
    <string name="general">General</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty</string>
    <string name="Dob_cannot_be_empty">Dob cannot be empty</string>
    <string name="profile_updated_sucessfully">Profile updated sucessfully</string>
    <string name="profile_updated_unsucessfully">Profile updatio failed!! </string>
    <string name="uploading_image">Uploading Image ....</string>


</resources>