<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="137dp"

        android:fontFamily="@font/league_spartan_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="0dp"
        android:text="@string/new_account"
        android:textColor="@color/backgroundColor"
        android:textFontWeight="0"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.0385"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08015"
        app:layout_constraintWidth_percent="0.6527" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/navigation_back_icon"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.08838"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.058" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/fullname"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1437"
        app:layout_constraintWidth_percent="0.594" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/signup_hint_text"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColorHint="@color/edittext_hintColor"
        android:textSize="18dp"
        app:layout_constraintDimensionRatio="299:45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1841"
        app:layout_constraintWidth_percent="0.8305" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25699"
        app:layout_constraintWidth_percent="0.594" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_shape"

        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="299:45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301986"
        app:layout_constraintWidth_percent="0.8305"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:hint="**********"
            android:inputType="textPassword"
            android:textColorHint="@color/edittext_hintColor"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3702"
        app:layout_constraintWidth_percent="0.5944" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"

        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/signup_hint_text"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColorHint="@color/edittext_hintColor"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="299:45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41986"
        app:layout_constraintWidth_percent="0.8305" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/mobile_number"
        android:textColor="@color/black"

        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="214:28"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4834"
        app:layout_constraintWidth_percent="0.5944" />

    <EditText
        android:id="@+id/txtdateofbirth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"

        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/signup_hint_text"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColorHint="@color/edittext_hintColor"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="299:45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53774"
        app:layout_constraintWidth_percent="0.8305" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/league_spartan_medium"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="131:27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5954"
        app:layout_constraintWidth_percent="0.3638" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/dob_format"
        android:inputType="text"
        android:paddingStart="15dp"

        android:textColorHint="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="299:45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6543"
        app:layout_constraintWidth_percent="0.8305" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"

        android:fontFamily="@font/league_spartan_medium"

        android:gravity="center_horizontal"
        android:text="@string/terms_and_privacy"
        android:textSize="14dp"
        app:layout_constraintVertical_bias="0.71"
        app:layout_constraintHorizontal_bias="0.4942"
        app:layout_constraintDimensionRatio="273:28"
        app:layout_constraintStart_toStartOf="parent"
        android:textFontWeight="300"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintWidth_percent="0.7583" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="207:45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7827"
        app:layout_constraintWidth_percent="0.575" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="670dp" />


</androidx.constraintlayout.widget.ConstraintLayout>